fucking safari is trash

--- a/index.html
+++ b/index.html
@@ -27,7 +27,10 @@
           diff = diff - (minutes * minutesInMS);
           var seconds = Math.floor(diff / 1000);
 
-          clock.textContent = `${days} Days ${hours}:${minutes}:${seconds}`;
+          var string = days.toString() + " Days " + hours.toString() + ":" + 
+            minutes.toString() + ":" + seconds.toString();
+
+          clock.textContent = string;
       }, 1000);
   
   </script>
